--- a/main.yml
+++ b/main.yml
@@ -4,7 +4,8 @@ Parameters:
   EC2InstanceType:
     Type: String
   EC2AMI:
-    Type: String
+    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
+    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
   CodePipelineBucket:
     Type: String
     Description: 'The S3 bucket for CodePipeline artifacts.'
