--- a/main.yml
+++ b/main.yml
@@ -4,8 +4,7 @@ Parameters:
   EC2InstanceType:
     Type: String
   EC2AMI:
-    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
-    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
+    Type: String
   CodePipelineBucket:
     Type: String
     Description: 'The S3 bucket for CodePipeline artifacts.'
@@ -24,7 +23,8 @@ Parameters:
     NoEcho: true
     Description: 'A GitHub personal access token with "repo" and
 "admin:repo_hook" permissions.'
-
+  Domain:
+    Type: String
 
 Resources:
 
@@ -177,6 +177,9 @@ Resources:
       Parameters:
         EC2InstanceType: !Ref EC2InstanceType 
         EC2AMI: !Ref EC2AMI
+        Domain: !Ref Domain
+        SubDomain: staging
+
   Prod:
     Type: AWS::CloudFormation::Stack 
     DependsOn: Staging
@@ -186,6 +189,8 @@ Resources:
       Parameters:
         EC2InstanceType: !Ref EC2InstanceType 
         EC2AMI: !Ref EC2AMI
+        Domain: !Ref Domain
+        SubDomain: prod
 
 Outputs:
 
