--- a/main.yml
+++ b/main.yml
@@ -4,8 +4,7 @@ Parameters:
   EC2InstanceType:
     Type: String
   EC2AMI:
-    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
-    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
+    Type: String
   CodePipelineBucket:
     Type: String
     Description: 'The S3 bucket for CodePipeline artifacts.'
@@ -26,6 +25,9 @@ Parameters:
 "admin:repo_hook" permissions.'
   Domain:
     Type: String
+  Certificate:
+    Type: String
+    Description: 'An existing ACM certificate ARN for your domain'
 
 Resources:
 
@@ -180,6 +182,7 @@ Resources:
         EC2AMI: !Ref EC2AMI
         Domain: !Ref Domain
         SubDomain: staging
+        Certificate: !Ref Certificate
 
   Prod:
     Type: AWS::CloudFormation::Stack 
@@ -192,6 +195,7 @@ Resources:
         EC2AMI: !Ref EC2AMI
         Domain: !Ref Domain
         SubDomain: prod
+        Certificate: !Ref Certificate
 
 Outputs:
 
@@ -201,8 +205,20 @@ Outputs:
     Export:
       Name: StagingLBEndpoint
 
+  StagingHTTPSLBEndpoint:
+    Description: The DNS name for the staging HTTPS LB 
+    Value: !GetAtt Staging.Outputs.HTTPSEndpoint 
+    Export:
+      Name: StagingHTTPSLBEndpoint
+
   ProdLBEndpoint:
     Description: The DNS name for the prod LB 
     Value: !GetAtt Prod.Outputs.LBEndpoint 
     Export:
       Name: ProdLBEndpoint
+
+  ProdHTTPSLBEndpoint:
+    Description: The DNS name for the prod HTTPS LB 
+    Value: !GetAtt Prod.Outputs.HTTPSEndpoint 
+    Export:
+      Name: ProdHTTPSLBEndpoint
