--- a/stage.yml
+++ b/stage.yml
@@ -9,9 +9,6 @@ Parameters:
     Type: String
   SubDomain:
     Type: String
-  Certificate:
-    Type: String
-    Description: 'An existing ACM certificate ARN for subdomain.domain'
 
 Resources:
 
@@ -22,12 +19,12 @@ Resources:
       GroupDescription: !Sub 'Internal Security group for ${AWS::StackName}'
       SecurityGroupIngress:
         - IpProtocol: tcp
-          FromPort: 8443 
-          ToPort: 8443 
+          FromPort: 8080
+          ToPort: 8080
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
-          FromPort: 443 
-          ToPort: 443 
+          FromPort: 80
+          ToPort: 80
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
           FromPort: 22
@@ -51,8 +48,6 @@ Resources:
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/CloudWatchFullAccess
         - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforAWSCodeDeploy
-        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore 
-        - arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy
       Policies:
         - PolicyName: ec2DescribeTags
           PolicyDocument:
@@ -172,30 +167,28 @@ Resources:
         - Key: Name
           Value: !Ref AWS::StackName
 
-  HTTPSLoadBalancerTargetGroup:
-    Type: AWS::ElasticLoadBalancingV2::TargetGroup
-    Properties:
-      TargetType: instance
-      Port: 8443
-      Protocol: HTTPS
-      VpcId: !Ref VPC 
-      HealthCheckEnabled: true 
-      HealthCheckProtocol: HTTPS
-      Tags:
-        - Key: Name
-          Value: !Ref AWS::StackName
-
-  HTTPSLoadBalancerListener:
+  LoadBalancerListener:
     Type: AWS::ElasticLoadBalancingV2::Listener
     Properties:
       DefaultActions:
         - Type: forward
-          TargetGroupArn: !Ref HTTPSLoadBalancerTargetGroup 
+          TargetGroupArn: !Ref LoadBalancerTargetGroup
       LoadBalancerArn: !Ref LoadBalancer
-      Certificates:
-        - CertificateArn: !Ref Certificate
-      Port: 443
-      Protocol: HTTPS
+      Port: 80
+      Protocol: HTTP
+
+  LoadBalancerTargetGroup:
+    Type: AWS::ElasticLoadBalancingV2::TargetGroup
+    Properties:
+      TargetType: instance
+      Port: 8080
+      Protocol: HTTP
+      VpcId: !Ref VPC
+      HealthCheckEnabled: true
+      HealthCheckProtocol: HTTP
+      Tags:
+        - Key: Name
+          Value: !Ref AWS::StackName
 
   ScalingGroup:
     Type: AWS::AutoScaling::AutoScalingGroup
@@ -224,7 +217,7 @@ Resources:
         LaunchTemplateId: !Ref InstanceLaunchTemplate
         Version: !GetAtt InstanceLaunchTemplate.LatestVersionNumber
       TargetGroupARNs:
-        - !Ref HTTPSLoadBalancerTargetGroup
+        - !Ref LoadBalancerTargetGroup
       MetricsCollection:
         -
           Granularity: "1Minute"
@@ -296,12 +289,6 @@ Resources:
 
               # Create log directory
               mkdir -p /home/ec2-user/app/logs
-
-              # Create a self-signed TLS certificate to communicate with the load balancer
-              mkdir -p /home/ec2-user/app/keys
-              cd /home/ec2-user/app/keys
-              openssl req -new -newkey rsa:4096 -days 365 -nodes -x509 -subj "/C=/ST=/L=/O=/CN=localhost" -keyout key.pem -out cert.pem
-
             EOF
 
             chown ec2-user:ec2-user /tmp/install_script.sh && chmod a+x /tmp/install_script.sh
@@ -322,9 +309,9 @@ Resources:
 
 Outputs:
 
-  HTTPSEndpoint:
+  LBEndpoint:
     Description: The DNS name for the stage 
-    Value: !Sub "https://${DNS}"
+    Value: !Sub "http://${DNS}"
 
   ScalingGroup:
     Description: The ScalingGroup for this stage 
